--- a/scheduler/BUILD.bazel
+++ b/scheduler/BUILD.bazel
@@ -1,7 +1,6 @@
 load("@io_bazel_rules_go//go:def.bzl", "go_binary", "go_library")
 load("//hack/gen:controller-gen.bzl", "gen_manifests")
 
-
 go_library(
     name = "go_default_library",
     srcs = [
@@ -33,5 +32,5 @@ go_binary(
 
 gen_manifests(
     pkg_name = "scheduler",
-    role_name = "snake-scheduler"
+    role_name = "snake-scheduler",
 )
