--- a/BUILD.bazel
+++ b/BUILD.bazel
@@ -1,19 +1,5 @@
-# helps gazelle generate appropriate importpaths based on our go.mod file
-# NOTE: IF YOU CHANGE ONE, YOU SHOULD CHANGE THE OTHER
-# gazelle:prefix github.com/digital-plumbers-union/moodring
-load("@com_github_bazelbuild_buildtools//buildifier:def.bzl", "buildifier")
+# gazelle:prefix github.com/digital-plumbers-union/snake
 load("@bazel_gazelle//:def.bzl", "gazelle")
 
-# BUILD file linter/formatter
-buildifier(
-    name = "buildifier",
-)
-
-# invoke buildifier in check mode to fail during CI
-buildifier(
-    name = "buildifier-check",
-    mode = "check",
-)
-
-# automatically generates BUILD files for go projects
+# generates BUILD files for go projects
 gazelle(name = "gazelle")
