--- a/scheduler/BUILD.bazel
+++ b/scheduler/BUILD.bazel
@@ -1,5 +1,7 @@
 load("@io_bazel_rules_go//go:def.bzl", "go_binary", "go_library")
 load("//hack/gen:controller-gen.bzl", "gen_manifests")
+load("@io_bazel_rules_docker//go:image.bzl", "go_image")
+load("@io_bazel_rules_docker//container:container.bzl", "container_push")
 
 go_library(
     name = "go_default_library",
@@ -28,6 +30,21 @@ go_binary(
     name = "scheduler",
     embed = [":go_default_library"],
     visibility = ["//visibility:public"],
+)
+
+go_image(
+    name = "container",
+    embed = [":go_default_library"],
+)
+
+container_push(
+    name = "push_container",
+    format = "Docker",
+    image = ":container",
+    registry = "index.docker.io",
+    repository = "dpush/snake-scheduler",
+    stamp = False,
+    tag = "latest",
 )
 
 gen_manifests(
