--- a/scheduler/BUILD.bazel
+++ b/scheduler/BUILD.bazel
@@ -9,12 +9,15 @@ go_library(
         "main.go",
         "mutatingwebhook.go",
     ],
-    importpath = "blockheads/go/snake/scheduler",
+    importpath = "github.com/digital-plumbers-union/snake/scheduler",
     visibility = ["//visibility:public"],
     deps = [
-        "//go/snake/scheduler/pkg/constants:go_default_library",
+        "//scheduler/pkg/constants:go_default_library",
         "@com_github_tektoncd_pipeline//pkg/apis/pipeline/v1beta1:go_default_library",
+        "@io_k8s_api//core/v1:go_default_library",
         "@io_k8s_apimachinery//pkg/apis/meta/v1:go_default_library",
+        "@io_k8s_apimachinery//pkg/types:go_default_library",
+        "@io_k8s_client_go//plugin/pkg/client/auth/gcp:go_default_library",
         "@io_k8s_sigs_controller_runtime//pkg/client:go_default_library",
         "@io_k8s_sigs_controller_runtime//pkg/client/config:go_default_library",
         "@io_k8s_sigs_controller_runtime//pkg/log:go_default_library",
