--- a/scheduler/pkg/constants/BUILD.bazel
+++ b/scheduler/pkg/constants/BUILD.bazel
@@ -3,6 +3,6 @@ load("@io_bazel_rules_go//go:def.bzl", "go_library")
 go_library(
     name = "go_default_library",
     srcs = ["constants.go"],
-    importpath = "blockheads/go/snake/scheduler/pkg/constants",
+    importpath = "github.com/digital-plumbers-union/snake/scheduler/pkg/constants",
     visibility = ["//visibility:public"],
 )
