build: get installation manifests working, setup some recipes

--- a/.env
+++ b/.env
@@ -3,3 +3,5 @@ TOOLBIN='bin'
 # put our toolbin on our path for any script that sources this file,
 # or just recipe
 PATH=$TOOLBIN:$PATH
+# use our dev cluster from just recipes
+KUBECONFIG=kind-kubeconfig.yaml
