--- a/scheduler/config/kustomization.yaml
+++ b/scheduler/config/kustomization.yaml
@@ -4,4 +4,37 @@ resources:
 - webhook
 - rbac
 - deployment.yaml
-- configmap.yaml
+- namespace.yaml
+- cert-manager
+
+patchesStrategicMerge:
+- scheduler_webhook_patch.yaml
+- webhook/cainjection_patch.yaml
+
+vars:
+- name: CERTIFICATE_NAMESPACE # namespace of the certificate CR
+  objref:
+    kind: Certificate
+    group: cert-manager.io
+    version: v1
+    name: serving-cert # this name should match the one in cert-manager/certificate.yaml
+  fieldref:
+    fieldpath: metadata.namespace
+- name: CERTIFICATE_NAME
+  objref:
+    kind: Certificate
+    group: cert-manager.io
+    version: v1
+    name: serving-cert # this name should match the one in cert-manager/certificate.yaml
+- name: SERVICE_NAMESPACE # namespace of the service
+  objref:
+    kind: Service
+    version: v1
+    name: webhook-service
+  fieldref:
+    fieldpath: metadata.namespace
+- name: SERVICE_NAME
+  objref:
+    kind: Service
+    version: v1
+    name: webhook-service
